--- a/agenda.html
+++ b/agenda.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Agenda</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=502929199"/>
-  <link rel="stylesheet" type="text/css" href="css/agenda.css?crc=169840480" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=3764751454"/>
+  <link rel="stylesheet" type="text/css" href="css/agenda.css?crc=3813346647" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_agenda.css?crc=4207352261"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_agenda.css?crc=347518926"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -60,7 +60,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u13706" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u13707-4"><!-- content --><p>Inicio</p></div></a>
         </div>
         <div class="MenuItemContainer clearfix grpelem" id="u34161"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34162" href="convenci%c3%b3n.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34163-4"><!-- content --><p>Convención</p></div><div class="transition grpelem" id="u34164"><!-- content --></div></a>
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34162" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34163-4"><!-- content --><p>Convencion</p></div><div class="transition grpelem" id="u34164"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u34166"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u34167"><!-- vertical box -->
            <li class="MenuItemContainer clearfix colelem" id="u34381"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34383" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34387-4"><!-- content --><p>Sede</p></div></a></li>
@@ -74,11 +74,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u14324" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14327-4"><!-- content --><p>Descargas</p></div><div class="transition grpelem" id="u14325"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u14328"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u14329"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u14418"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14420" href="galer%c3%ada.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14424-4"><!-- content --><h6>Galería</h6></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u14418"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14420" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14424-4"><!-- content --><h6>Galeria</h6></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u14512"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u14515" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14517-4"><!-- content --><h6>Agenda</h6></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u14597"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14600" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14603-4"><!-- content --><h6>Presentaciones</h6></div></a></li>
           </ul>
          </div>
+        </div>
+        <div class="MenuItemContainer clearfix grpelem" id="u35434"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
         </div>
        </nav>
        <div class="clearfix grpelem" id="u28141"><!-- group -->
@@ -117,7 +120,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u13518" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u13521-4"><!-- content --><p>Presentaciones</p></div></a>
        </div>
        <div class="MenuItemContainer borderbox clearfix colelem" id="u13566"><!-- horizontal box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u13567" href="galer%c3%ada.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u13568-4"><!-- content --><p>Galería</p></div></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u13567" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u13568-4"><!-- content --><p>Galería</p></div></a>
        </div>
       </nav>
       <a class="nonblock nontext clip_frame colelem" id="u13606" href="assets/agenda-28jun2016.pdf" target="_blank"><!-- image --><img class="block" id="u13606_img" src="images/pdf-icon.png?crc=50410384" alt="" data-image-width="62" data-image-height="62"/></a>
