--- a/expositores-resp.html
+++ b/expositores-resp.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Expositores Resp</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3993211264"/>
-  <link rel="stylesheet" type="text/css" href="css/expositores-resp.css?crc=3892755605" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=103117451"/>
+  <link rel="stylesheet" type="text/css" href="css/expositores-resp.css?crc=485408564" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_expositores-resp.css?crc=3788033865"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_expositores-resp.css?crc=4099367419"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -254,7 +254,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u171" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u174-4"><!-- content --><p>Inicio</p></div></a>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u34133"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34134" href="convenci%c3%b3n.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34135-4"><!-- content --><p>Convención</p></div><div class="transition grpelem" id="u34136"><!-- content --></div></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34134" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34135-4"><!-- content --><p>Convencion</p></div><div class="transition grpelem" id="u34136"><!-- content --></div></a>
      <div class="SubMenu MenuLevel1 clearfix" id="u34138"><!-- vertical box -->
       <ul class="SubMenuView clearfix colelem" id="u34139"><!-- vertical box -->
        <li class="MenuItemContainer clearfix colelem" id="u34348"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34350" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34354-4"><!-- content --><p>Sede</p></div></a></li>
@@ -268,11 +268,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u14305" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14308-4"><!-- content --><p>Descargas</p></div><div class="transition grpelem" id="u14306"><!-- content --></div></a>
      <div class="SubMenu MenuLevel1 clearfix" id="u14303"><!-- vertical box -->
       <ul class="SubMenuView clearfix colelem" id="u14304"><!-- vertical box -->
-       <li class="MenuItemContainer clearfix colelem" id="u14392"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14394" href="galer%c3%ada.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14398-4"><!-- content --><h6>Galería</h6></div></a></li>
+       <li class="MenuItemContainer clearfix colelem" id="u14392"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14394" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14398-4"><!-- content --><h6>Galeria</h6></div></a></li>
        <li class="MenuItemContainer clearfix colelem" id="u14491"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14492" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14493-4"><!-- content --><h6>Agenda</h6></div></a></li>
        <li class="MenuItemContainer clearfix colelem" id="u14576"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14577" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14580-4"><!-- content --><h6>Presentaciones</h6></div></a></li>
       </ul>
      </div>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u35518"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35542" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35543-4"><!-- content --><p>Registro</p></div></a>
     </div>
    </nav>
    <div class="clearfix grpelem" id="pu5218-7"><!-- column -->
