--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Inicio</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=266256348" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=89280430" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=438631004"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=58876188"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -223,7 +223,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u14011" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14014-4"><!-- content --><p>Inicio</p></div></a>
          </div>
          <div class="MenuItemContainer clearfix grpelem" id="u34182"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34185" href="convenci%c3%b3n.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34186-4"><!-- content --><p>Convención</p></div><div class="transition grpelem" id="u34188"><!-- content --></div></a>
+          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34185" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34186-4"><!-- content --><p>Convencion</p></div><div class="transition grpelem" id="u34188"><!-- content --></div></a>
           <div class="SubMenu MenuLevel1 clearfix" id="u34183"><!-- vertical box -->
            <ul class="SubMenuView clearfix colelem" id="u34184"><!-- vertical box -->
             <li class="MenuItemContainer clearfix colelem" id="u34407"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34409" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34413-4"><!-- content --><p>Sede</p></div></a></li>
@@ -237,11 +237,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u14347" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14348-4"><!-- content --><p>Descargas</p></div><div class="transition grpelem" id="u14349"><!-- content --></div></a>
           <div class="SubMenu MenuLevel1 clearfix" id="u14345"><!-- vertical box -->
            <ul class="SubMenuView clearfix colelem" id="u14346"><!-- vertical box -->
-            <li class="MenuItemContainer clearfix colelem" id="u14444"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14446" href="galer%c3%ada.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14450-4"><!-- content --><p>Galería</p></div></a></li>
+            <li class="MenuItemContainer clearfix colelem" id="u14444"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14446" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14450-4"><!-- content --><p>Galeria</p></div></a></li>
             <li class="MenuItemContainer clearfix colelem" id="u14533"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14534" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14536-4"><!-- content --><p>Agenda</p></div></a></li>
             <li class="MenuItemContainer clearfix colelem" id="u14618"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14621" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14622-4"><!-- content --><p>Presentaciones</p></div></a></li>
            </ul>
           </div>
+         </div>
+         <div class="MenuItemContainer clearfix grpelem" id="u35714"><!-- vertical box -->
+          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35738" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35741-4"><!-- content --><p>Registro</p></div></a>
          </div>
         </nav>
         <div class="clearfix grpelem" id="u28594"><!-- group -->
