--- a/registro.html
+++ b/registro.html
@@ -17,10 +17,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Registro</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=61320664" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=183329274" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_registro.css?crc=347190874"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_registro.css?crc=3925074953"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -73,7 +73,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34795" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34796-4"><!-- content --><p>Inicio</p></div></a>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u34778"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34779" href="convenci%c3%b3n.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34780-4"><!-- content --><p>Convención</p></div><div class="transition grpelem" id="u34781"><!-- content --></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34779" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34780-4"><!-- content --><p>Convencion</p></div><div class="transition grpelem" id="u34781"><!-- content --></div></a>
       <div class="SubMenu MenuLevel1 clearfix" id="u34783"><!-- vertical box -->
        <ul class="SubMenuView clearfix colelem" id="u34784"><!-- vertical box -->
         <li class="MenuItemContainer clearfix colelem" id="u34785"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34786" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34787-4"><!-- content --><p>Sede</p></div></a></li>
@@ -87,11 +87,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34800" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34802-4"><!-- content --><p>Descargas</p></div><div class="transition grpelem" id="u34803"><!-- content --></div></a>
       <div class="SubMenu MenuLevel1 clearfix" id="u34804"><!-- vertical box -->
        <ul class="SubMenuView clearfix colelem" id="u34805"><!-- vertical box -->
-        <li class="MenuItemContainer clearfix colelem" id="u34806"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34809" href="galer%c3%ada.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34812-4"><!-- content --><h6>Galería</h6></div></a></li>
+        <li class="MenuItemContainer clearfix colelem" id="u34806"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34809" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34812-4"><!-- content --><h6>Galeria</h6></div></a></li>
         <li class="MenuItemContainer clearfix colelem" id="u34820"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34821" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34823-4"><!-- content --><h6>Agenda</h6></div></a></li>
         <li class="MenuItemContainer clearfix colelem" id="u34813"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34814" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34815-4"><!-- content --><h6>Presentaciones</h6></div></a></li>
        </ul>
       </div>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u35630"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u35631" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35633-4"><!-- content --><p>Registro</p></div></a>
      </div>
     </nav>
     <div id="u34834-4-wrapper">
